Polish README (#146)
* Start polishing README (WIP)

* Add scala-cli runnable doc for ValueVectorCodecs

* Add scala-cli runnable doc for ValueVectorCodecsNullable

* Add scala-cli runnable doc for TabularSchemaEncoder

* Add scala-cli runnable doc for TabularVectorSchemaRoot

* Add scala-cli runnable doc for IPC

* Add scala-cli runnable doc for Datafusion

* Update README, replace examples with scala-cli ones

* Update gitignore and scalafmt.conf

* Add section about scala-cli

* linter