@@ -6,9 +6,11 @@
 # ZIO Apache Arrow
 
 ZIO based wrapper for [Apache Arrow Java Implementation](https://arrow.apache.org/docs/java/index.html) that leverages
-[ZIO Schema](https://zio.dev/zio-schema/) library to derive codecs
-for [ValueVector](https://arrow.apache.org/docs/java/reference/index.html)
-and [VectorSchemaRoot](https://arrow.apache.org/docs/java/reference/index.html).
+[ZIO Schema](https://zio.dev/zio-schema/) library to derive codecs for [ValueVector](https://arrow.apache.org/docs/java/reference/index.html) and [VectorSchemaRoot](https://arrow.apache.org/docs/java/reference/index.html).
+
+**To the best of my knowledge at the time of writing, this is the only library that provides automatic codecs derivation for Apache Arrow among all type-safe programming languages.**
+
+Want more? Checkout out my ZIO-powered library for Apache Parquet - [ZIO Apache Parquet](https://github.com/grouzen/zio-apache-parquet).
 
 ## Why?
 
@@ -18,10 +20,10 @@ and [VectorSchemaRoot](https://arrow.apache.org/docs/java/reference/index.html).
 - **Integration with Arrow ecosystem** - the [Core](#core) module provides the groundwork for integrating your application or library with various parts of the Arrow ecosystem such as [Datafusion](https://datafusion.apache.org), [Polars](https://pola.rs), [Apache Iceberg](https://iceberg.apache.org), and more.
 
 
-## Content
+## Contents
 
 - [Installation](#installation)
-- [Modules](#modules)
+- [Usage](#usage)
   - [Core](#core)
     - [Codecs](#codecs)
       - [ValueVector](#valuevector)
@@ -40,7 +42,9 @@ libraryDependencies += "me.mnedokushev" %% "zio-apache-arrow-core"       % "@VER
 libraryDependencies += "me.mnedokushev" %% "zio-apache-arrow-datafusion" % "@VERSION@"
 ```
 
-## Modules
+## Usage
+
+All examples are self-contained [Scala CLI](https://scala-cli.virtuslab.org) snippets. You can find copies of them in `docs/scala-cli`.
 
 ### Core
 
@@ -62,54 +66,103 @@ https://arrow.apache.org/docs/java/vector.html
 ###### Built-in primitive and complex types
 
 ```scala
+//> using scala "3.4.3"
+//> using dep me.mnedokushev::zio-apache-arrow-core:0.1.4
+//> using dep org.apache.arrow:arrow-memory-unsafe:18.1.0
+//> using javaOpt --add-opens=java.base/java.nio=ALL-UNNAMED
+
 import me.mnedokushev.zio.apache.arrow.core.Allocator
-import me.mnedokushev.zio.apache.arrow.core.codec._
-import zio.schema._
-import zio.schema.Factory._
+import me.mnedokushev.zio.apache.arrow.core.codec.*
+import zio.*
+import zio.schema.*
+import zio.schema.Factory.*
 
-case class MyData(a: Int, b: String)
-object MyData {
-  implicit val schema: Schema[MyData] = DeriveSchema.gen[MyData]
-}
+object ValueVectorCodecs extends ZIOAppDefault:
 
-val intCodec            = ValueVectorCodec.intCodec
-val listStringCodec     = ValueVectorCodec.listChunkCodec[String]
-val structMyDataCodec   = ValueVectorCodec.structCodec[MyData]
+  case class MyData(a: Int, b: String)
 
-ZIO.scoped(
-  for {
-    intVec             <- intCodec.encodeZIO(Chunk(1, 2, 3))
-    intResult          <- intCodec.decodeZIO(vec) // [1, 2, 3]
-    listStringVec      <- listStringCodec.encodeZIO(Chunk(Chunk("a", "b"), Chunk("c")))
-    listStringResult   <- listStringCodec.decodeZIO(vec) // [["a", "b"], ["c"]]
-    structMyDataVec    <- structMyDataCodec.encodeZIO(Chunk(MyData(1, "a"), MyData(2, "b")))
-    structMyDataResult <- structMyDataCodec.decodeZIO(vec) // [{"a": 1, "b": a}, {"a": 2, "b": b}]
-  } yield ()
-).provide(Allocator.rootLayer())
+  object MyData:
+    implicit val schema: Schema[MyData] = DeriveSchema.gen[MyData]
+
+  val intCodec          = ValueVectorCodec.intCodec
+  val listStringCodec   = ValueVectorCodec.listChunkCodec[String]
+  val structMyDataCodec = ValueVectorCodec.structCodec[MyData]
+
+  override def run =
+    ZIO
+      .scoped(
+        for {
+          intVec             <- intCodec.encodeZIO(Chunk(1, 2, 3))
+          intResult          <- intCodec.decodeZIO(intVec)
+          listStringVec      <- listStringCodec.encodeZIO(Chunk(Chunk("a", "b"), Chunk("c")))
+          listStringResult   <- listStringCodec.decodeZIO(listStringVec)
+          structMyDataVec    <- structMyDataCodec.encodeZIO(Chunk(MyData(1, "a"), MyData(2, "b")))
+          structMyDataResult <- structMyDataCodec.decodeZIO(structMyDataVec)
+          _                  <- Console.printLine(intVec)
+          _                  <- Console.printLine(intResult)
+          _                  <- Console.printLine(listStringVec)
+          _                  <- Console.printLine(listStringResult)
+          _                  <- Console.printLine(structMyDataVec)
+          _                  <- Console.printLine(structMyDataResult)
+        } yield ()
+      )
+      .provide(Allocator.rootLayer())
+  // Outputs:
+  // [1, 2, 3]
+  // Chunk(1,2,3)
+  // [["a","b"], ["c"]]
+  // Chunk(Chunk(a,b),Chunk(c))
+  // [{"a":1,"b":"a"}, {"a":2,"b":"b"}]
+  // Chunk(MyData(1,a),MyData(2,b))
 ```
 
 ###### Nullable
 
 ```scala
+//> using scala "3.4.3"
+//> using dep me.mnedokushev::zio-apache-arrow-core:0.1.4
+//> using dep org.apache.arrow:arrow-memory-unsafe:18.1.0
+//> using javaOpt --add-opens=java.base/java.nio=ALL-UNNAMED
+
 import me.mnedokushev.zio.apache.arrow.core.Allocator
-import me.mnedokushev.zio.apache.arrow.core.codec._
-import zio.schema._
-import zio.schema.Factory._
+import me.mnedokushev.zio.apache.arrow.core.codec.*
+import org.apache.arrow.vector.IntVector
+import zio.*
+import zio.schema.*
+import zio.schema.Factory.*
 
-val intCodec           = ValueVectorCodec.optionCodec[IntVector, Int]
-val listStringCodec    = ValueVectorCodec.listChunkOptionCodec[String]
-val optionListIntCodec = ValueVectorCodec.optionListChunkCodec[Int]
+object ValueVectorCodecsNullable extends ZIOAppDefault:
 
-ZIO.scoped(
-  for {
-    intVec              <- intCodec.encodeZIO(Chunk(Some(1), None, Some(2)))
-    intResult           <- intCodec.decodeZIO(vec) // [1, null, 2]
-    listStringVec       <- listStringCodec.encodeZIO(Chunk(Chunk(Some("a"), None), Chunk(Some("b"))))
-    listStringResult    <- listStringCodec.decodeZIO(vec) // [["a", null], ["b"]]
-    optionListIntVec    <- optionListIntCodec.encodeZIO(Chunk(Some(Chunk("a", "b")), None, Some(Chunk("c"))))
-    optionListIntResult <- optionListIntCodec.decodeZIO(vec) // [["a", "b"], null, ["c"]]
-  } yield ()
-).provide(Allocator.rootLayer())
+  val intCodec              = ValueVectorCodec.optionCodec[IntVector, Int]
+  val listStringCodec       = ValueVectorCodec.listChunkOptionCodec[String]
+  val optionListStringCodec = ValueVectorCodec.optionListChunkCodec[String]
+
+  override def run =
+    ZIO
+      .scoped(
+        for {
+          intVec                 <- intCodec.encodeZIO(Chunk(Some(1), None, Some(2)))
+          intResult              <- intCodec.decodeZIO(intVec)
+          listStringVec          <- listStringCodec.encodeZIO(Chunk(Chunk(Some("a"), None), Chunk(Some("b"))))
+          listStringResult       <- listStringCodec.decodeZIO(listStringVec)
+          optionListStringVec    <- optionListStringCodec.encodeZIO(Chunk(Some(Chunk("a", "b")), None, Some(Chunk("c"))))
+          optionListStringResult <- optionListStringCodec.decodeZIO(optionListStringVec)
+          _                      <- Console.printLine(intVec)
+          _                      <- Console.printLine(intResult)
+          _                      <- Console.printLine(listStringVec)
+          _                      <- Console.printLine(listStringResult)
+          _                      <- Console.printLine(optionListStringVec)
+          _                      <- Console.printLine(optionListStringResult)
+        } yield ()
+      )
+      .provide(Allocator.rootLayer())
+  // Outputs:
+  // [1, null, 2]
+  // Chunk(Some(1),None,Some(2))
+  // [["a",null], ["b"]]
+  // Chunk(Chunk(Some(a),None),Chunk(None))
+  // [["a","b"], null, ["c"]]
+  // Chunk(Some(Chunk(a,b)),None,Some(Chunk(c)))
 ```
 
 ##### Tabular
@@ -126,46 +179,75 @@ The API is similar to the ValueVectorCodec. The main difference is that it is su
 When working with tabular data, we need a way to convert ZIO Schema into [Arrow Schema](https://arrow.apache.org/docs/java/reference/org/apache/arrow/vector/types/pojo/Schema.html).
 
 ```scala
-import me.mnedokushev.zio.apache.arrow.core.codec._
-import zio.schema._
+//> using scala "3.4.3"
+//> using dep me.mnedokushev::zio-apache-arrow-core:0.1.4
+//> using dep org.apache.arrow:arrow-memory-unsafe:18.1.0
+//> using javaOpt --add-opens=java.base/java.nio=ALL-UNNAMED
 
-case class MyData(a: Int, b: String)
-object MyData {
-  implicit val schema: Schema[MyData] = 
-    DeriveSchema.gen[MyData]
-  implicit val schemaEncoder: SchemaEncoder[MyData] =
-    SchemaEncoder.fromDefaultDeriver[MyData]
-}
+import me.mnedokushev.zio.apache.arrow.core.codec.*
+import zio.*
+import zio.schema.*
 
-MyData.schemaEncoder.encode(MyData.schema) // Right(Schema<a: Int(64, true) not null, b: Utf8 not null>)
+object TabularSchemaEncoder extends ZIOAppDefault:
+
+  case class MyData(a: Int, b: String)
+
+  object MyData:
+    implicit val schema: Schema[MyData]               =
+      DeriveSchema.gen[MyData]
+    implicit val schemaEncoder: SchemaEncoder[MyData] =
+      SchemaEncoder.fromDefaultDeriver[MyData]
+
+  override def run =
+    for {
+      schema <- ZIO.fromEither(MyData.schemaEncoder.encode(MyData.schema))
+      _      <- Console.printLine(schema)
+    } yield ()
+  // Outputs:
+  // Schema<a: Int(64, true) not null, b: Utf8 not null>
 ```
 
 ###### VectorSchemaRoot
 
 ```scala
+//> using scala "3.4.3"
+//> using dep me.mnedokushev::zio-apache-arrow-core:0.1.4
+//> using dep org.apache.arrow:arrow-memory-unsafe:18.1.0
+//> using javaOpt --add-opens=java.base/java.nio=ALL-UNNAMED
+
 import me.mnedokushev.zio.apache.arrow.core.Allocator
-import me.mnedokushev.zio.apache.arrow.core.codec._
-import me.mnedokushev.zio.apache.arrow.core.Tabular._
-import zio.schema._
-import zio.schema.Factory._
+import me.mnedokushev.zio.apache.arrow.core.codec.*
+import me.mnedokushev.zio.apache.arrow.core.Tabular.*
+import me.mnedokushev.zio.apache.arrow.core.Tabular
+import zio.*
+import zio.schema.*
+import zio.schema.Factory.*
 
-case class MyData(a: Int, b: String)
-object MyData {
-  implicit val schema: Schema[MyData] = 
-    DeriveSchema.gen[MyData]
-  implicit val schemaEncoder: SchemaEncoder[MyData] = 
-    SchemaEncoder.fromDefaultDeriver[MyData]
-}
+object TabularVectorSchemaRoot extends ZIOAppDefault:
 
-val myDataCodec = VectorSchemaRootCodec.codec[MyData]
+  case class MyData(a: Int, b: String)
 
-ZIO.scoped(
-  for {
-    root         <- Tabular.empty[MyData]
-    myDataVec    <- myDataCodec.encodeZIO(Chunk(MyData(1, "a"), MyData(2, "b")))
-    myDataResult <- myDataCodec.decodeZIO(myDataVec)
-  } yield ()
-).provide(Allocator.rootLayer())
+  object MyData:
+    implicit val schema: Schema[MyData]               =
+      DeriveSchema.gen[MyData]
+    implicit val schemaEncoder: SchemaEncoder[MyData] =
+      SchemaEncoder.fromDefaultDeriver[MyData]
+
+  val myDataCodec = VectorSchemaRootCodec.codec[MyData]
+
+  override def run =
+    ZIO
+      .scoped(
+        for {
+          root         <- Tabular.empty[MyData]
+          myDataVec    <- myDataCodec.encodeZIO(Chunk(MyData(1, "a"), MyData(2, "b")), root)
+          myDataResult <- myDataCodec.decodeZIO(myDataVec)
+          _            <- Console.printLine(myDataResult)
+        } yield ()
+      )
+      .provide(Allocator.rootLayer())
+  // Outputs:
+  // Chunk(MyData(1,a),MyData(2,b))
 ```
 
 You also can use methods from `Tabular` to simplify encoding/decoding:
@@ -189,33 +271,48 @@ https://arrow.apache.org/docs/java/ipc.html
 Now, knowing how to define codecs we may use this knowledge to make some real-world serialization/deserialization:
 
 ```scala
+//> using scala "3.4.3"
+//> using dep me.mnedokushev::zio-apache-arrow-core:0.1.4
+//> using dep org.apache.arrow:arrow-memory-unsafe:18.1.0
+//> using javaOpt --add-opens=java.base/java.nio=ALL-UNNAMED
+
 import me.mnedokushev.zio.apache.arrow.core.Allocator
-import me.mnedokushev.zio.apache.arrow.core.codec._
-import me.mnedokushev.zio.apache.arrow.core.ipc._
+import me.mnedokushev.zio.apache.arrow.core.codec.*
+import me.mnedokushev.zio.apache.arrow.core.ipc.*
 import java.io.ByteArrayInputStream
-import zio.schema._
-import zio.schema.Factory._
+import zio.*
+import zio.stream.*
+import zio.schema.*
+import zio.schema.Factory.*
 
-case class MyData(a: Int, b: String)
-object MyData {
-  implicit val schema: Schema[MyData] = 
-    DeriveSchema.gen[MyData]
-  implicit val schemaEncoder: SchemaEncoder[MyData] = 
-    SchemaEncoder.fromDefaultDeriver[MyData]
-  implicit val encoder: VectorSchemaRootDecoder[MyData] =
-    VectorSchemaRootDecoder.fromDefaultDeriver[MyData]
-  implicit val decoder: VectorSchemaRootEncoder[MyData] =
-    VectorSchemaRootEncoder.fromDefaultDeriver[MyData]
-}
+object IPC extends ZIOAppDefault:
 
-val payload = (1 to 8096).map(i => MyData(i, i.toString))
+  case class MyData(a: Int, b: String)
 
-ZIO.scoped(
-  for {
-    out    <- writeStreaming[Any, MyData](ZStream.from(payload))
-    result <- readStreaming[MyData](new ByteArrayInputStream(out.toByteArray)).runCollect // Chunk(MyData(1, "1"), ..., MyData(8096, "8096"))
-  } yield ()
-).provide(Allocator.rootLayer())
+  object MyData:
+    implicit val schema: Schema[MyData]                   =
+      DeriveSchema.gen[MyData]
+    implicit val schemaEncoder: SchemaEncoder[MyData]     =
+      SchemaEncoder.fromDefaultDeriver[MyData]
+    implicit val encoder: VectorSchemaRootDecoder[MyData] =
+      VectorSchemaRootDecoder.fromDefaultDeriver[MyData]
+    implicit val decoder: VectorSchemaRootEncoder[MyData] =
+      VectorSchemaRootEncoder.fromDefaultDeriver[MyData]
+
+  val payload = (1 to 8096).map(i => MyData(i, s"string ${i.toString}"))
+
+  override def run =
+    ZIO
+      .scoped(
+        for {
+          out    <- writeStreaming[Any, MyData](ZStream.from(payload))
+          result <- readStreaming[MyData](new ByteArrayInputStream(out.toByteArray)).runCollect
+          _      <- Console.printLine(result)
+        } yield ()
+      )
+      .provide(Allocator.rootLayer())
+  // Outputs:
+  // Chunk(MyData(1,string 1), ..., MyData(8096,string 8096))
 ```
 
 ### Datafusion
@@ -231,33 +328,48 @@ John,Doe,London,99
 ```
 
 ```scala
+//> using scala "3.4.3"
+//> using dep me.mnedokushev::zio-apache-arrow-core:0.1.4
+//> using dep me.mnedokushev::zio-apache-arrow-datafusion:0.1.4
+//> using dep org.apache.arrow:arrow-memory-unsafe:18.1.0
+//> using javaOpt --add-opens=java.base/java.nio=ALL-UNNAMED
+
 import me.mnedokushev.zio.apache.arrow.core.Allocator
-import me.mnedokushev.zio.apache.arrow.core.codec._
-import me.mnedokushev.zio.apache.arrow.datafusion._
-import zio._
-import zio.schema._
+import me.mnedokushev.zio.apache.arrow.core.codec.*
+import me.mnedokushev.zio.apache.arrow.datafusion.*
+import zio.*
+import zio.schema.*
 
 import java.nio.file.Paths
+import java.io.File
 
-case class User(fname: String, lname: String, address: String, age: Long)
-object User {
-  implicit val schema: Schema[User]                                   =
-    DeriveSchema.gen[User]
-  implicit val schemaEncoder: SchemaEncoder[User]                     =
-    Derive.derive[SchemaEncoder, User](SchemaEncoderDeriver.default)
-  implicit val vectorSchemaRootDecoder: VectorSchemaRootDecoder[User] =
-    VectorSchemaRootDecoder.fromDefaultDeriver[User]
-}
+object Datafusion extends ZIOAppDefault:
 
-(
-  ZIO.serviceWithZIO[Context] { context =>
-    for {
-      _      <- context.registerCsv("test", Paths.get(getClass.getResource("/test.csv").toURI))
-      df     <- context.sql("SELECT * FROM test WHERE fname = 'Dog'")
-      result <- df.collect[User].runCollect // Chunk(User("Dog", "Cat", "NY", 3)))
-    } yield ()
-  }
-).provide(Context.create, Allocator.rootLayer())
+  case class User(fname: String, lname: String, address: String, age: Long)
+
+  object User:
+    implicit val schema: Schema[User]                                   =
+      DeriveSchema.gen[User]
+    implicit val schemaEncoder: SchemaEncoder[User]                     =
+      Derive.derive[SchemaEncoder, User](SchemaEncoderDeriver.default)
+    implicit val vectorSchemaRootDecoder: VectorSchemaRootDecoder[User] =
+      VectorSchemaRootDecoder.fromDefaultDeriver[User]
+
+  override def run =
+    (
+      ZIO
+        .serviceWithZIO[Context] { context =>
+          for {
+            _      <- context.registerCsv("test", Paths.get(new File("test.csv").toURI))
+            df     <- context.sql("SELECT * FROM test WHERE fname = 'Dog'")
+            result <- df.collect[User].runCollect
+            _      <- Console.printLine(result)
+          } yield ()
+        }
+      )
+      .provide(Context.create, Allocator.rootLayer())
+  // Outputs:
+  // Chunk(User(Dog,Cat,NY,3))
 ```
 
 You can also write the data back to CSV or Parquet files using `df.writeCsv` and `df.writeParquet` methods.
